# mapplauncherd-booster-qtcomponents

./: CMakeLists.txt  booster-qtcomponents.pro
data/: booster-nemomobile.service
qml/: preload.qml
rpm/: mapplauncherd-booster-nemomobile.spec
src/: qmlbooster.cpp
